--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -179,11 +179,10 @@
 
 <main class="main">
   <div class="container">
-    <div>
-      <p>{{ myObject | json }}</p>
-    </div>
-  </div>
+      </div>
   <div class="content">
+    <h1>Hello, {{ title }}</h1>
+    <p>{{ myObject | json }}</p> 
     <div class="left-side">
             <svg
         xmlns="http://www.w3.org/2000/svg"
